--- a/Docs/TP0_03.md
+++ b/Docs/TP0_03.md
@@ -2,19 +2,19 @@
 
 ## Básico
 
-- Tener 2 Jugadores (Uno a la izquierda y otro a la derecha)
+- Tener 2 Jugadores (Uno a la izquierda y otro a la derecha) ✅
   - P1 se maneja con WS. P2 se maneja con las flechas.
-- Integrar 2 sprites para que cada uno de los jugadores tenga su imagen correspondiente.
-- Todos los objetos que se muevan deben tener uso de “Delta Time”.
+- Integrar 2 sprites para que cada uno de los jugadores tenga su imagen correspondiente. ✅
+- Todos los objetos que se muevan deben tener uso de “Delta Time”. ✅
 - Hacer un sistema de obstáculos que los spawnee en una posición random (Aproximadamente en el
 centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
 
 ## Intermedio: Pong
 
-- Tiene un menú principal (Visto en el TP02).
+- Tiene un menú principal (Visto en el TP02). ✅
 - Limitar la posición de los jugadores a la cancha de juego.
 - Hacer el movimiento de una pelota.
-- Tener una pantalla de opciones (Se pausa el juego).
+- Tener una pantalla de opciones (Se pausa el juego). ✅
   - Debe poder configurarse los siguientes aspectos del juego:
     - La velocidad del jugador.
     - El alto de la paleta.
