--- a/Docs/TP0_03.md
+++ b/Docs/TP0_03.md
@@ -12,7 +12,7 @@ centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
 ## Intermedio: Pong
 
 - Tiene un menú principal (Visto en el TP02). ✅
-- Limitar la posición de los jugadores a la cancha de juego.
+- Limitar la posición de los jugadores a la cancha de juego. ✅
 - Hacer el movimiento de una pelota.
 - Tener una pantalla de opciones (Se pausa el juego). ✅
   - Debe poder configurarse los siguientes aspectos del juego:
