--- a/Docs/TP0_03.md
+++ b/Docs/TP0_03.md
@@ -13,7 +13,7 @@ centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
 
 - Tiene un menú principal (Visto en el TP02). ✅
 - Limitar la posición de los jugadores a la cancha de juego. ✅
-- Hacer el movimiento de una pelota.
+- Hacer el movimiento de una pelota.✅
 - Tener una pantalla de opciones (Se pausa el juego). ✅
   - Debe poder configurarse los siguientes aspectos del juego:
     - La velocidad del jugador.
@@ -23,9 +23,9 @@ centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
 ## Avanzado
 
 - Los jugadores y la pelota (Al igual que cualquier objeto que se mueva en la escena) se mueven con
-físicas (RigidBody -> AddForce).
+físicas (RigidBody -> AddForce). ✅
 - Hacer un sistema de spawns de powers up (Por ejemplo: Velocidad de la pelota, Tamaño del Pad del
 jugador, defensas, etc...)
-- La velocidad de la pelota aumenta con el tiempo o con impactos.
+- La velocidad de la pelota aumenta con el tiempo o con impactos. ✅
 - Los spawner funcionan con el patrón de diseño “Object Pool“
 - Legibilidad de código y estandarización de variables, declaraciones, funciones y clases.
