--- a/Docs/TP0_03.md
+++ b/Docs/TP0_03.md
@@ -7,7 +7,7 @@
 - Integrar 2 sprites para que cada uno de los jugadores tenga su imagen correspondiente. ✅
 - Todos los objetos que se muevan deben tener uso de “Delta Time”. ✅
 - Hacer un sistema de obstáculos que los spawnee en una posición random (Aproximadamente en el
-centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
+centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer. ✅
 
 ## Intermedio: Pong
 
@@ -25,7 +25,7 @@ centro) y los haga desaparecer entre 3 a 7 segundos después de aparecer.
 - Los jugadores y la pelota (Al igual que cualquier objeto que se mueva en la escena) se mueven con
 físicas (RigidBody -> AddForce). ✅
 - Hacer un sistema de spawns de powers up (Por ejemplo: Velocidad de la pelota, Tamaño del Pad del
-jugador, defensas, etc...)
+jugador, defensas, etc...) ✅
 - La velocidad de la pelota aumenta con el tiempo o con impactos. ✅
-- Los spawner funcionan con el patrón de diseño “Object Pool“
-- Legibilidad de código y estandarización de variables, declaraciones, funciones y clases.
+- Los spawner funcionan con el patrón de diseño “Object Pool“ ✅
+- Legibilidad de código y estandarización de variables, declaraciones, funciones y clases. ✅
